--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CustomPlus</string>
     <string name="customplus">CustomPlus</string>
+    <string name="transportation">Transportation</string>
+    <string name="statistics">Statistics</string>
 </resources>
