--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="customplus">CustomPlus</string>
     <string name="transportation">Transportation</string>
     <string name="statistics">Statistics</string>
+    <string name="statistics_fragment">Statistics Fragment</string>
+    <string name="transportation_fragment">Transportation Fragment</string>
 </resources>
