--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="transportation_subway_fragment">transportation/subway fragment</string>
     <string name="request_failed">Request Failed</string>
     <string name="retry">Retry</string>
+    <string name="from">From</string>
+    <string name="airport">Airport</string>
+    <string name="hong_kong">Hong Kong</string>
+    <string name="to">To</string>
+    <string name="next_train">Next train:</string>
 </resources>
