--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hong_kong">Hong Kong</string>
     <string name="to">To</string>
     <string name="next_train">Next train:</string>
+    <string name="loading">Loading...</string>
 </resources>
